add dto / model bookCollections
